--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "express": "^4.17.1",
     "ib": "^0.2.4",
     "install": "^0.13.0",
-    "npm": "^7.21.0"
+    "npm": "^7.21.0",
+    "twilio": "^3.71.2"
   },
   "engines": {
     "node": ">= 4.0.0"
   },
   "main": "./server.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "dotenv": "^10.0.0"
+  }
 }
